added some dynamic content to the weather section. Now you can click on the weathercards and will get photography tips according to cloud conditions

--- a/cameras.html
+++ b/cameras.html
@@ -43,12 +43,12 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="weather.html">El clima</a>
+                            <a class="nav-link" href="weather.html">Prepará tu salida</a>
                         </li>
 
                     </ul>
                     <form id="searchForm" class="d-flex">
-                        <input id="searchString" class="form-control me-2" type="search" placeholder="Buscar"
+                        <input id="searchString" class="form-control me-2" type="search" placeholder="Buscar en Cámaras"
                             aria-label="Search">
                     </form>
                 </div>
@@ -65,7 +65,7 @@
 
 
 
-    <container id="cardContainer" class="productsContainer d-flex">
+    <container id="cardContainer" class="productsContainer d-flex noFilter">
         <!-- Acá van las cards de productos que se populan con la función cardHTMLGenerator -->
     </container>
     <!-- Bootstrap toast -->
