--- a/cart.html
+++ b/cart.html
@@ -31,26 +31,19 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Productos
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="productos/camaras.html">Cámaras</a></li>
-                                <li><a class="dropdown-item" href="productos/lentes.html">Lentes</a></li>
-                                <li><a class="dropdown-item" href="productos/accesorios.html">Accesorios</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="productos/usados.html">Usados</a></li>
+                                <li><a class="dropdown-item" href="cameras.html">Cámaras</a></li>
+                                <li><a class="dropdown-item" href="lenses.html">Lentes</a></li>
+                                <li><a class="dropdown-item" href="accesories.html">Accesorios</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="weather.html">El clima</a>
+                            <a class="nav-link" href="weather.html">Prepará tu salida</a>
                         </li>
                     </ul>
 
