added recommended products to weather section

--- a/weather.html
+++ b/weather.html
@@ -84,7 +84,10 @@
     <!-- Fin JS de Bootstrap -->
     <!-- JS Custom -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
+    <script src="js/catalog.js"></script>
+    <script src="js/cardsController.js"></script>
     <script src="js/getCart.js"></script>
+    <script src="js/weatherTips.js"></script>
     <script src="js/weather.js"></script>
 </body>
 
