--- a/accesories.html
+++ b/accesories.html
@@ -99,7 +99,19 @@
             
         </div>
     </div>
+
     <!-- Fin Bootstap toast-->
+    <footer>
+        <ul class="leftUl">
+            <li>Sheipeg | Tu Tienda de Fotografía</li>
+            <li>info@sheipeg.com</li>
+        </ul>
+        <div class="line"></div>
+        <ul class="rightUl">
+            <li>+54 911 5543 6879</li>
+            <li>Defensa al consumidor</li>
+        </ul>
+    </footer>
     <!-- JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -107,6 +119,7 @@
     <!-- Fin JS de Bootstrap -->
     <!-- JS Custom -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
+    <script src="js/searchController.js"></script>
     <script src="js/getCart.js"></script>
     <script src="js/catalog.js"></script>
     <script src="js/cardsController.js"></script>
