--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@
             
         </div>
     </div>
+    <footer>
+        <ul class="leftUl">
+            <li>Sheipeg | Tu Tienda de Fotografía</li>
+            <li>info@sheipeg.com</li>
+        </ul>
+        <div class="line"></div>
+        <ul class="rightUl">
+            <li>+54 911 5543 6879</li>
+            <li>Defensa al consumidor</li>
+        </ul>
+    </footer>
     <!-- Fin Bootstap toast-->
     <!-- JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -163,6 +174,7 @@
     <!-- Fin JS de Bootstrap -->
     <!-- JS Custom -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
+    <script src="js/searchController.js"></script>
     <script src="js/getCart.js"></script>
     <script src="js/catalog.js"></script>
     <script src="js/cardsController.js"></script>
