--- a/weather.html
+++ b/weather.html
@@ -77,6 +77,17 @@
     <div id="weatherTips" class="weatherTips">
 
     </div>
+    <footer>
+        <ul class="leftUl">
+            <li>Sheipeg | Tu Tienda de Fotografía</li>
+            <li>info@sheipeg.com</li>
+        </ul>
+        <div class="line"></div>
+        <ul class="rightUl">
+            <li>+54 911 5543 6879</li>
+            <li>Defensa al consumidor</li>
+        </ul>
+    </footer>
     <!-- JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
