added anchorlink to weather.html for better UX. Also improved responsiveness of filterContainer in index.html for screens with smaller height

--- a/weather.html
+++ b/weather.html
@@ -74,6 +74,7 @@
         <!--Fin spinner de Bootstrap-->
         <!--Fin cards del clima-->
     </container>
+    <span class="tipsAnchor" id="tipsAnchor"></span>
     <div id="weatherTips" class="weatherTips">
 
     </div>
